service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80          # port the Service exposes
      targetPort: 5000  # port the container listens on
  type: ClusterIP
